# wordle-assistant

./: .flake8  README.md  pyproject.toml
data/: dictionary_fr.txt  dictionary_fr_lemot.txt  dictionary_fr_sutom.txt
src/: runner.py  stats.py  wordle_assistant.py
