[tool.poetry]
name = "wordle-assistant"
version = "0.1.0"
description = ""
authors = ["Clément Grimal <clement.grimal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wordle = "stats:main"
