[tool.poetry]
name = "wordle-assistant"
version = "0.1.0"
description = "Tools to remove all the fun from playing Wordle"
authors = ["Clément Grimal <clement.grimal@gmail.com>"]
readme = "README.md"

# packages = [
#     { include = "src" },
# ]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.931"

[tool.poetry.scripts]
wordle-assistant = "runner:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
